--- a/FlyffNetwork.vcxproj
+++ b/FlyffNetwork.vcxproj
@@ -50,6 +50,13 @@
     <ClInclude Include="source\framework_fengine.h" />
     <ClInclude Include="source\handler\cache\handler_cache.hpp" />
     <ClInclude Include="source\handler\cache\packets_snap\packets_snap.hpp" />
+    <ClInclude Include="source\handler\cache\packets_snap\packet_snap_add_obj.hpp" />
+    <ClInclude Include="source\handler\cache\packets_snap\packet_snap_dest_pos.hpp" />
+    <ClInclude Include="source\handler\cache\packets_snap\packet_snap_environment_all.hpp" />
+    <ClInclude Include="source\handler\cache\packets_snap\packet_snap_get_position.hpp" />
+    <ClInclude Include="source\handler\cache\packets_snap\packet_snap_mover_corr.hpp" />
+    <ClInclude Include="source\handler\cache\packets_snap\packet_snap_query_player_data.hpp" />
+    <ClInclude Include="source\handler\cache\packets_snap\packet_snap_world_read_info.hpp" />
     <ClInclude Include="source\handler\cache\packets_type\packets_type.hpp" />
     <ClInclude Include="source\handler\certifier\handler_certifier.hpp" />
     <ClInclude Include="source\handler\certifier\packets\packets_serveur_list.hpp" />
