good bye warnings
Compilation

--- a/samples/ClientTest/ClientTest.vcxproj
+++ b/samples/ClientTest/ClientTest.vcxproj
@@ -87,7 +87,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>../../source/</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../source/; ./</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
