--- a/FlyffNetwork.vcxproj
+++ b/FlyffNetwork.vcxproj
@@ -55,8 +55,13 @@
     <ClInclude Include="source\handler\cache\packets_snap\packet_snap_get_position.hpp" />
     <ClInclude Include="source\handler\cache\packets_snap\packet_snap_mover_corr.hpp" />
     <ClInclude Include="source\handler\cache\packets_snap\packet_snap_query_player_data.hpp" />
+    <ClInclude Include="source\handler\cache\packets_snap\packet_snap_state_machine_mode_all.hpp" />
     <ClInclude Include="source\handler\cache\packets_snap\packet_snap_world_read_info.hpp" />
     <ClInclude Include="source\handler\cache\packets_type\packets_type.hpp" />
+    <ClInclude Include="source\handler\cache\packets_type\packet_caption.hpp" />
+    <ClInclude Include="source\handler\cache\packets_type\packet_defined_text.hpp" />
+    <ClInclude Include="source\handler\cache\packets_type\packet_game_rate.hpp" />
+    <ClInclude Include="source\handler\cache\packets_type\packet_get_clock.hpp" />
     <ClInclude Include="source\handler\cache\packets_type\packet_get_core_player.hpp" />
     <ClInclude Include="source\handler\cache\packets_type\packet_get_player_addr.hpp" />
     <ClInclude Include="source\handler\cache\packets_type\packet_get_player_count.hpp" />
