Generation de packet operator in / out / release
Generator Packet

--- a/tools/GeneratorPacket/GeneratorPacket.vcxproj
+++ b/tools/GeneratorPacket/GeneratorPacket.vcxproj
@@ -33,8 +33,10 @@
     <ClInclude Include="..\..\source\tools\generator_packet\xmlLoader.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <Xml Include="..\..\ressource\xml\tools\certifier_packet.xml" />
     <Xml Include="..\..\ressource\xml\tools\generator_packet.xml" />
-    <Xml Include="..\..\ressource\xml\tools\test.xml" />
+    <Xml Include="..\..\ressource\xml\tools\cache_packet.xml" />
+    <Xml Include="..\..\ressource\xml\tools\login_packet.xml" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
